deploy/overlays/prod/patch_init_containers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-api-server
spec:
  template:
    spec:
#      securityContext:
#        sysctls:
#        - name: net.ipv4.tcp_tw_reuse
#          value: "1"        # default 0
#        - name: net.ipv4.tcp_max_tw_buckets
#          value: "30000000" # default 524288
#        - name: net.ipv4.tcp_max_syn_backlog
#          value: "819200"   # default 4096
#        - name: net.ipv4.tcp_keepalive_time
#          value: "7200"     # default 7200
#        - name: net.core.somaxconn
#          value: "32768"    # default 4096
#        - name: vm.swappiness
#          value: "0"        # default 60
