deploy/overlays/prod/k8s-all-in-one.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: golang-api-server
    monitoring.qclaogui.com: "true"
    version: v0.0.1
  name: golang-api-server-svc
  namespace: default
spec:
  ports:
  - name: http-metrics
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: golang-api-server
    version: v0.0.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: golang-api-server
    version: v0.0.1
  name: golang-api-server
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: golang-api-server
      version: v0.0.1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: golang-api-server
        logging.qclaogui.com: "true"
        version: v0.0.1
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - golang-api-server
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - envFrom:
        - configMapRef:
            name: golang-api-server-fk6dm666t8
        image: qclaogui/golang-api-server:IMAGE_TAG
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: http-metrics
        name: golang-api-server
        ports:
        - containerPort: 8080
          name: http-metrics
        readinessProbe:
          httpGet:
            path: /healthz
            port: http-metrics
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
      imagePullSecrets:
      - name: ucloud-registry
      topologySpreadConstraints:
      - labelSelector:
          matchLabels:
            app: golang-api-server
            version: v0.0.1
        maxSkew: 2
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: ScheduleAnyway
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  labels:
    version: v0.0.1
  name: golang-api-server
  namespace: default
spec:
  rules:
  - host: golang-api-server.k8s.qclaogui.com
    http:
      paths:
      - backend:
          service:
            name: golang-api-server-svc-v0-0-1
            port:
              name: http-metrics
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: Region
    nginx.ingress.kubernetes.io/canary-by-header-pattern: EN|CN
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
  labels:
    version: v0.0.1
  name: golang-api-server-canary
  namespace: default
spec:
  rules:
  - host: golang-api-server.k8s.qclaogui.com
    http:
      paths:
      - backend:
          service:
            name: golang-api-server-svc-v0-0-1
            port:
              name: http-metrics
        path: /
        pathType: Prefix
